[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/credits/KICTANet Logo.jpg" type="Texture" id=1]
[ext_resource path="res://assets/credits/German Cooperation logo -01.png" type="Texture" id=2]
[ext_resource path="res://assets/credits/DW logo 2_DW Akademie dark-blue RGB.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/Credits.gd" type="Script" id=4]
[ext_resource path="res://scenes/Loading.tscn" type="PackedScene" id=5]

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 35.7091
margin_top = 74.1636
margin_right = 373.709
margin_bottom = 223.164
rect_scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 316.944
margin_top = 322.281
margin_right = 662.944
margin_bottom = 476.281
rect_scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 581.327
margin_top = 63.6995
margin_right = 1019.33
margin_bottom = 265.699
rect_scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -358.0
margin_top = 130.0
margin_right = 356.0
margin_bottom = 572.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Name"]
margin_right = 714.0
margin_bottom = 29.0
text = "Credits"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Name"]
margin_top = 61.0
margin_right = 714.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="Name/VBoxContainer"]
margin_right = 714.0
margin_bottom = 29.0
text = "Written by:"
align = 1

[node name="Label2" type="Label" parent="Name/VBoxContainer"]
margin_top = 33.0
margin_right = 714.0
margin_bottom = 62.0
text = "Riva Jalipa"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Name"]
margin_top = 155.0
margin_right = 714.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="Name/VBoxContainer2"]
margin_right = 714.0
margin_bottom = 29.0
text = "Illustrated by "
align = 1

[node name="Label2" type="Label" parent="Name/VBoxContainer2"]
margin_top = 33.0
margin_right = 714.0
margin_bottom = 62.0
text = "Eddy Mwazige & Brandon Ndichu"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Name"]
margin_top = 249.0
margin_right = 714.0
margin_bottom = 311.0

[node name="Label" type="Label" parent="Name/VBoxContainer3"]
margin_right = 714.0
margin_bottom = 29.0
text = "Web developers "
align = 1

[node name="Label2" type="Label" parent="Name/VBoxContainer3"]
margin_top = 33.0
margin_right = 714.0
margin_bottom = 62.0
text = "Safisha Media"
align = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="Name"]
margin_top = 343.0
margin_right = 714.0
margin_bottom = 405.0

[node name="Label" type="Label" parent="Name/VBoxContainer4"]
margin_right = 714.0
margin_bottom = 29.0
text = "Project leads "
align = 1

[node name="Label2" type="Label" parent="Name/VBoxContainer4"]
margin_top = 33.0
margin_right = 714.0
margin_bottom = 62.0
text = "Mwara Gichanga Liz Orembo & Grace Githaiga"
align = 1

[node name="Buttons" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -331.0
margin_top = 36.0
margin_right = 333.0
margin_bottom = 83.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Buttons"]
margin_right = 204.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "MAin menu"

[node name="English" type="Button" parent="Buttons"]
margin_left = 229.0
margin_right = 434.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "English"

[node name="Kish" type="Button" parent="Buttons"]
margin_left = 459.0
margin_right = 664.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Kiswahili"

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Loading" parent="." instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -272.348
margin_top = 181.743
margin_right = 279.652
margin_bottom = 311.743

[connection signal="pressed" from="Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
